# WebCompatManager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .taskcluster.yml  CLUSTERING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
server/frontend/: .babelrc  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  vitest.config.js  webpack.common.js
server/frontend/src/: api.js  bucket_filter.js  bucket_filter_config.js  filter_helpers.js  helpers.js  main.js  prefilled_bug_helpers.js  router.js
server/frontend/src/components/: Clustering.vue  HelpJSONQueryPopover.vue  HelpSignaturePopover.vue  LoadingSpinner.vue  PageNav.vue  ProviderKey.vue  ReportStats.vue  ReportStatsGraph.vue
server/frontend/src/components/Buckets/: AssignBtn.vue  AssignBtnForm.vue  CreateOrEdit.vue  FilterBar.vue  HideBucketBtn.vue  HideBucketBtnForm.vue  List.vue  QueryEditor.vue  ReportPreviewRow.vue  Row.vue  StatusFilter.vue  TriageBucketDropdown.vue  View.vue
server/frontend/src/components/Buckets/ReportEntries/: List.vue
server/frontend/src/components/Bugs/: FullPPCSelect.vue  HelpPopover.vue  ProductComponentSelect.vue  PublicationForm.vue  SummaryInput.vue  UserDropdown.vue
server/frontend/src/components/Bugs/Comments/: PublicationForm.vue
server/frontend/src/components/Bugs/PossibleDuplicates/: List.vue
server/frontend/src/components/Notifications/: BucketHit.vue  InaccessibleBug.vue  Inbox.vue
server/frontend/src/components/Reports/: DeleteConfirmation.vue  List.vue  Row.vue
server/frontend/src/components/Spikes/: List.vue
server/frontend/tests/: bucket_filter.test.js  buckets_list.test.js  country_rank_filter.test.js  filter_helpers.test.js  helpers.test.js  inbox.test.js  provider_key.test.js  report_stats.test.js
server/reportmanager/: cron.py  forms.py  locking.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
server/reportmanager/Bugtracker/: BugzillaREST.py
server/reportmanager/clustering/: ClusterBucketManager.py  SBERTClusterer.py
server/reportmanager/management/commands/: backfill_missing_report_data.py  bug_update_status.py  cleanup_old_reports.py  cluster_reports.py  detect_bucket_spikes.py  import_country_ranks.py  import_domain_list.py  import_reports_from_bigquery.py  label_buckets.py  notify_by_email.py  triage_new_report.py  triage_new_reports.py  unset_buckets_triage_status.py
server/reportmanager/migrations/: 0001_initial.py  0011_cluster_reportentry_cluster_and_more.py  0011_spikedetectionrun_bucketspike_and_more.py  0012_clusteringjob_alter_bucket_id.py  0013_reportentry_comments_preprocessed_reportentry_domain.py  0014_populate_domain_and_preprocessed.py  0015_bucket_cluster.py  0016_joblock.py  0017_reportentry_country.py  0018_add_triage_status.py  0019_migrate_hide_until_to_triage_status.py  0020_remove_hide_until.py  0021_domainsource_domainentry.py  0022_bucket_domain_normalized_label_bucketlabel.py  0023_backfill_domain_normalized.py  0024_bucketcountryrank.py  0025_bucketcountryrank_import_id.py  0026_remove_auto_now_from_bucketcountryrank.py
server/reportmanager/templates/: clustering.html  stats.html
server/reportmanager/templates/buckets/: index.html  spikes.html
server/reportmanager/templates/layouts/: layout_base.html
server/reportmanager/templates/registration/: login.html
server/reportmanager/templates/shared/: footer.html  header.html
server/server/: auth.py  middleware.py  settings.py  urls.py  utils.py  views.py
src/webcompat/: models.py  symptoms.py
src/webcompat/schemas/: signature.json
tests/: test_bucket_labels.py  test_clustering.py  test_country_rank_columns_api.py  test_country_rank_query.py  test_domain_lists.py  test_import_country_ranks.py  test_locking.py  test_unset_buckets_triage_status.py  test_utils.py
tests/e2e/: conftest.py  test_bucket_view.py  test_buckets.py
tests/e2e/fixtures/: defaults.py  fixtures.json  reports_data.py
tests/e2e/page_objects/: base.py  bucket_view.py  buckets.py  login.py
tests/e2e/scripts/: generate_e2e_fixtures.py
