[build-system]
requires = ["setuptools>=64", "setuptools_scm>8"]
build-backend = "setuptools.build_meta"

[project]
name = "WebCompatManager"
requires-python = "~=3.12.0"
authors = [
    {name = "Christian Holler", email = "choller@mozilla.com"},
    {name = "Jesse Schwartzentruber", email = "jschwartzentruber@mozilla.com"},
]
description = "A WebCompat management tools collection"
keywords = ["test", "testing"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
license = {text = "MPL 2.0"}
maintainers = [
    {name = "Mozilla Fuzzing Team", email = "fuzzing@mozilla.com"},
]
dynamic = ["readme", "version"]
dependencies = [
    "jsonpath-ng",
    "jsonschema>=4.18.0",
    "python-dateutil",
    "setuptools==80.9.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox==4.34.1",
    "ruff==0.15.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "celery-types==0.24.0",
    "django-stubs==5.2.9",
    "djangorestframework-types==0.9.0",
    "types-requests==2.32.4.20260107",
    "types-python-dateutil==2.9.0.20260124",
]
docker = [
    "gunicorn~=22.0.0",
    "mozilla-django-oidc~=4.0.1",
    "mysqlclient~=2.2.4",
]
server = [
    "celery==5.6.2",
    "crispy-bootstrap3==2024.1",
    "django==6.0.2",
    "django-crispy-forms==2.5",
    "django_stubs_ext==5.2.9",
    "djangorestframework==3.16.1",
    "google-cloud-bigquery==3.40.0",
    "pyyaml==6.0.3",
    "whitenoise==6.11.0",
]

[project.urls]
Homepage = "https://github.com/MozillaSecurity/WebCompatManager"
Issues = "https://github.com/MozillaSecurity/WebCompatManager/issues"
Repository = "https://github.com/MozillaSecurity/WebCompatManager.git"

[tool.coverage.report]
exclude_lines = [
    "@(abc.)?abstract*",
    "except ImportError(.*):",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.coverage.run]
omit = [
    "*/dist/*",
    "*/tests/*",
    "*/.tox/*",
    "*/.eggs/*",
]

[tool.mypy]

[tool.pytest.ini_options]
log_level = "DEBUG"
DJANGO_SETTINGS_MODULE = "server.settings_test"
pythonpath = [".", "server"]
addopts = ["-v", "--cov=.", "--cov-report", "term-missing"]
filterwarnings = [
    'ignore:"@coroutine" decorator:DeprecationWarning:aiohttp',
    'ignore:You passed a bytestring:DeprecationWarning:flake8.options.config',
    "ignore:Using or importing the ABCs from 'collections':DeprecationWarning:celery.canvas",
    "ignore:Using or importing the ABCs from 'collections':DeprecationWarning:yaml",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
]

[tool.ruff]
fix = true
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = [
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Flynt
    "FLY",
    # isort
    "I",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # pyupgrade
    "UP",
    # pycodestyle
    "W",
]
ignore = ["SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["reportmanager"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["webcompat", "webcompat.schemas"]

[tool.setuptools_scm]

[tool.tox]
envlist = ["312", "mypy"]
tox_pip_extensions_ext_venv_update = true
skip_missing_interpreters = true

[tool.tox.env_run_base]
extras = ["dev", "server"]
usedevelop = true
passenv = ["TOXENV", "CI", "TRAVIS", "TRAVIS_*", "CODECOV_*", "TWINE_*"]
install_command = ["python", "-m", "pip", "install", "-c", "{toxinidir}/requirements.txt", "{opts}", "{packages}"]
commands = [["pytest", "-v", "--cov", "{toxinidir}", "--cov-report", "term-missing", "{posargs}"]]

[tool.tox.env.codecov]
skip_install = true
deps = ["coverage[toml]"]
commands = [["codecov"]]
allowlist_externals = ["codecov"]

[tool.tox.env.mypy]
commands = [["mypy", "{posargs}"]]
usedevelop = true

[tool.tox.env.pypi]
skip_install = true
deps = ["twine", "build"]
commands = [["python", "-m", "build"], ["twine", "upload", "--skip-existing", "dist/*"]]
allowlist_externals = ["bash"]
